fix adaptation on mobile

--- a/app/styles/sass/blocks/_testing-services.scss
+++ b/app/styles/sass/blocks/_testing-services.scss
@@ -30,7 +30,7 @@
 
     .slider-container{
         padding: 4rem 0 5rem;
-
+        overflow: hidden;
         @include media-for (null, $tablet){
             padding: 2rem 0 5rem;
             .container{
